@@ -276,13 +276,14 @@ vsyncrate = 75
 #                                        'max'           will allocate as much cycles as your computer is able to
 #                                                        handle.
 #                                      Possible values: auto, fixed, max.
-#                           cycleup: Amount of cycles to decrease/increase with keycombos.(CTRL-F11/CTRL-F12)
+#                           cycleup: Amount of cycles to decrease/increase with the mapped keyboard shortcut.
 #                         cycledown: Setting it lower than 100 will be a percentage.
 # cycle emulation percentage adjust: The percentage adjustment for use with the "Emulate CPU speed" feature. Default is 0 (no adjustment), but you can adjust it (between -25% and 25%) if necessary.
 #   use dynamic core with paging on: Allow dynamic cores (dynamic_x86 and dynamic_rec) to be used with 386 paging enabled.
 #                                      If the dynamic_x86 core is set, this allows Windows 9x/ME to run properly, but may somewhat decrease the performance.
 #                                      If the dynamic_rec core is set, this disables the dynamic core if the 386 paging functions are currently enabled.
-#                                      If set to auto, this option will be enabled when 386 paging is enabled.
+#                                      If set to auto, this option will be enabled depending on if the 386 paging and a guest system is currently active.
+#                                      Possible values: true, false, 1, 0, auto.
 #                           apmbios: Emulate Advanced Power Management BIOS calls
 core                              = auto
 fpu                               = true
